Attempt to fix jumping video element

--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,11 @@ header {
 	background-repeat: no-repeat;
 	background-position: center center;
 	margin: 64px 0px 80px 0px;
+  transition: 0.35s;
+}
+
+.dark-video {
+  display: none;
 }
 
 .video {
@@ -211,10 +216,7 @@ header {
   width: 281px;
   margin-top: 14px;
 	border-radius: 30px;
-}
-
-.dark-video {
-  display: none;
+  transition: 0.35s;
 }
 
 .app-store-download-top { 
